--- a/Rochak/style.css
+++ b/Rochak/style.css
@@ -10,7 +10,7 @@ html,body{
 .nav{
   height:100px;
   width:100%;
-  background-color:red;
+  background-color:DarkMagenta;
   display:flex;
   align-items:center;
   justify-content:space-between;
@@ -19,7 +19,7 @@ html,body{
 }
 .nav-part2{
   display:flex;
-  background-color:navy;
+  background-color:GreenYellow;
   gap:3vw;
   color:black;
 }
